2011-06-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: AM_DISTCHECK_CONFIGURE_FLAGS is for corner cases
	* doc/automake.texi (Checking the Distribution): Explain that the
	developers should take care of making their code buildable without
	requiring any special configure options, so that in general
	AM_DISTCHECK_CONFIGURE_FLAGS shouldn't be used.  Give an example
	of where its use is legitimate.
	Suggestions from Ralf Wildenhues and Eric Blake.

2011-06-13  Stefano Lattarini  <stefano.lattarini@gmail.com>

	news: update w.r.t. introduction of AM_DISTCHECK_CONFIGURE_FLAGS
	* NEWS (Miscellaneous changes): Update.

2011-06-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	maintcheck: DISTCHECK_CONFIGURE_FLAGS can be defined on make cmdline
	* Makefile.am (sc_tests_overriding_macros_on_cmdline): It's now
	acceptable that the test scripts override DISTCHECK_CONFIGURE_FLAGS
	on the make command line.  Update comments accordingly.  Since we
	are at it, make the relevant grepping rules slightly tighter.

2011-06-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	distcheck: add support for AM_DISTCHECK_CONFIGURE_FLAGS
	* doc/automake.texi (Checking the Distribution): Suggest to use
	AM_DISTCHECK_CONFIGURE_FLAGS, not DISTCHECK_CONFIGURE_FLAGS, to
	define (in the top-level Makefile.am) extra flags to be passed
	to configure at "make distcheck" time; DISTCHECK_CONFIGURE_FLAGS
	should be reserved for the user.  Add proper `@vindex' directive.
	Document that AM_DISTCHECK_CONFIGURE_FLAGS is not honoured in a
	subpackage Makefile.am, but the flags in it are passed down to
	the configure script of the subpackage.
	* lib/am/distdir.am (distcheck): Also pass the flags in
	$(AM_DISTCHECK_CONFIGURE_FLAGS) to the configure invocation.
	Update comments.
	* tests/defs.in.test (AM_DISTCHECK_CONFIGURE_FLAGS,
	DISTCHECK_CONFIGURE_FLAGS): Unset in case they are exported in
	the environment, they might improperly influence our testsuite.