@@ -32,7 +32,9 @@ END
 unset sentence || :
 
 cat > Makefile.am << 'END'
-AM_DISTCHECK_CONFIGURE_FLAGS = --enable-success sentence='it works :-)'
+AM_DISTCHECK_CONFIGURE_FLAGS = $(dc_flags1) $(dc_flags2)
+dc_flags1 = --enable-success sentence='it works :-)'
+dc_flags2 =
 END
 
 $ACLOCAL
@@ -54,7 +56,7 @@ $MAKE distcheck
 # $(AM_DISTCHECK_CONFIGURE_FLAGS)
 
 cat >> Makefile.am << 'END'
-AM_DISTCHECK_CONFIGURE_FLAGS += --disable-success
+dc_flags2 += --disable-success
 END
 $AUTOMAKE Makefile
 ./config.status Makefile
