@@ -1,3 +1,11 @@
+2011-08-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: fix spurious failure with Solaris make
+	* tests/distcheck-configure-flags-am.test: Avoid using `+=' too
+	liberally with AM_DISTCHECK_CONFIGURE_FLAGS, since the line breaks
+	so introduced, in conjunction with single quotes, might confuse
+	Solaris make.
+
 2011-06-18  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	docs: AM_DISTCHECK_CONFIGURE_FLAGS is for corner cases
